force-app/main/default/objects/County_to_Zip_codes__c/County_to_Zip_codes__c.object-meta.xml
<CustomObject>
    <description>Integration</description>
    <label>County to Zip codes</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>County Zip code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County to Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>