force-app/main/default/objects/County_to_Zip_codes__c/fields/County_Distributor__c.field-meta.xml
<CustomField>
    <fullName>County_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County distributor</label>
    <referenceTo>County_Distributor__c</referenceTo>
    <relationshipLabel>County to Zip Codes</relationshipLabel>
    <relationshipName>County_to_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>