force-app/main/default/objects/County_to_Zip_codes__c/fields/County_To_Zip_External_Id__c.field-meta.xml
<CustomField>
    <fullName>County_To_Zip_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>County To Zip External Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>