force-app/main/default/objects/County_to_Zip_codes__c/fields/Zip_Codes_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Zip_Codes_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Codes distributor</label>
    <referenceTo>Zip_codes_distributor__c</referenceTo>
    <relationshipLabel>County to Zip Codes</relationshipLabel>
    <relationshipName>County_to_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>